@@ -1,0 +1,38 @@
+/*
+ * Copyright 2020 the original author or authors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      https://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+package org.springframework.kafka.listener;
+
+import org.springframework.kafka.support.TopicPartitionOffset;
+
+/**
+ * A component implementing this interface can provide the next delivery attempt.
+ *
+ * @author Gary Russell
+ * @since 2.5
+ *
+ */
+@FunctionalInterface
+public interface DeliveryAttemptAware {
+
+	/**
+	 * Return the next delivery attempt for the topic/partition/offset.
+	 * @param topicPartitionOffset the topic/partition/offset.
+	 * @return the next delivery attempt.
+	 */
+	int deliveryAttempt(TopicPartitionOffset topicPartitionOffset);
+
+}
