@@ -1,5 +1,5 @@
 /*
- * Copyright 2014-2019 the original author or authors.
+ * Copyright 2014-2020 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -194,5 +194,11 @@ public abstract class KafkaHeaders {
 	 * @since 2.3
 	 */
 	public static final String GROUP_ID = PREFIX + "groupId";
+
+	/**
+	 * For inbound messages, when container retries are enabled the delivery attempt.
+	 * @since 2.5
+	 */
+	public static final String DELIVERY_ATTEMPT = PREFIX + "deliveryAttempt";
 
 }
